--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "volantis",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://streltsov-do.github.io/valantis",
     "dependencies": {
         "@babel/core": "^7.24.0",
         "@babel/plugin-syntax-flow": "^7.23.3",
@@ -33,7 +34,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "p": "prettier . --write"
+        "p": "prettier . --write",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -59,6 +62,7 @@
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.34",
         "eslint": "^8.57.0",
+        "gh-pages": "^6.1.1",
         "prettier": "^3.2.5"
     }
 }
