[valantis] отключение запроса ids при возвращении пустого массива при использовании фильтрации; правка ширины лоадера в мобильной версии при переключении страниц; уменьшение количества перезапросов до 5; отключение возможности изменения параметров фильтрации во время выполнения запроса;

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "volantis",
+    "name": "valantis",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://streltsov-do.github.io/valantis",
